--- a/advanced housing_reg.ipynb
+++ b/advanced housing_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -196,15 +195,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Id  MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
-       "0   1          60       RL         65.0     8450   Pave   NaN      Reg   \n",
+       "   Id  MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape   \n",
+       "0   1          60       RL         65.0     8450   Pave   NaN      Reg  \\\n",
        "1   2          20       RL         80.0     9600   Pave   NaN      Reg   \n",
        "2   3          60       RL         68.0    11250   Pave   NaN      IR1   \n",
        "3   4          70       RL         60.0     9550   Pave   NaN      IR1   \n",
        "4   5          60       RL         84.0    14260   Pave   NaN      IR1   \n",
        "\n",
-       "  LandContour Utilities  ... PoolArea PoolQC Fence MiscFeature MiscVal MoSold  \\\n",
-       "0         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
+       "  LandContour Utilities  ... PoolArea PoolQC Fence MiscFeature MiscVal MoSold   \n",
+       "0         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2  \\\n",
        "1         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      5   \n",
        "2         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      9   \n",
        "3         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
@@ -220,7 +219,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,19 +227,15 @@
    "source": [
     "## Загрузка данных\n",
     "\n",
+    "df_train = pd.read_csv('/home/viktoria/Рабочий стол/проект_4мая/train.csv')   # 1460x81\n",
+    "df_test = pd.read_csv('/home/viktoria/Рабочий стол/проект_4мая/test.csv')   # 1459x80\n",
     "\n",
-    "path_train = '/Users/vasevooo/projects/house_prices/housing_kaggle/data/train.csv'\n",
-    "path_test = '/Users/vasevooo/projects/house_prices/housing_kaggle/data/test.csv'\n",
-    "\n",
-    "df_train = pd.read_csv(path_train)\n",
-    "df_test = pd.read_csv(path_test)\n",
-    "\n",
-    "df_train.head()\n"
+    "df_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +433,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +642,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,12 +653,12 @@
     "df = pd.concat([df_train.drop('SalePrice', axis=1), df_test], axis=0)\n",
     "df.reset_index(inplace=True, drop=True)\n",
     "y = np.log(df_train['SalePrice'])\n",
-    "df.head(5)\n"
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +779,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +819,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/fx/mm163gs50sg284cn4dbq0dlh0000gn/T/ipykernel_53659/1255858044.py:3: UserWarning: \n",
+      "/tmp/ipykernel_4187/1255858044.py:3: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -856,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1056,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1200,7 @@
        "BsmtQual       2.77"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,46 +1211,66 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Обработка категориальных фичей\n",
+    "Вася"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Обработка числовых фичей \n",
     "Вика"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Обработка числовых фичей \n",
-    "Вася"
+    "df['LotFrontage'] = df['LotFrontage'].fillna(df['LotFrontage']).mean()\n",
+    "df['MasVnrArea'] = df['MasVnrArea'].fillna(df['MasVnrArea'].mean())\n",
+    "df['GarageYrBlt'] = df['GarageYrBlt'].fillna(df['GarageYrBlt'].mean())"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "df['BsmtHalfBath'] = df['BsmtHalfBath'].fillna(0)\n",
+    "df['BsmtFullfBath'] = df['BsmtFullBath'].fillna(0)\n",
+    "df['GarageArea'] = df['GarageArea'].fillna(0)\n",
+    "df['GarageCars'] = df['GarageCars'].fillna(0)\n",
+    "df['BsmtFinSF1'] = df['BsmtFinSF1'].fillna(0)\n",
+    "df['BsmtFinSF2'] = df['BsmtFinSF2'].fillna(0)\n",
+    "df['BsmtUnfSF'] = df['BsmtUnfSF'].fillna(0)\n",
+    "df['TotalBsmtSF'] = df['TotalBsmtSF'].fillna(0)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1269,10 +1284,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.9"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
