feature eng in progress

--- a/advanced housing_reg.ipynb
+++ b/advanced housing_reg.ipynb
@@ -3719,59 +3719,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22.40140     1\n",
-       "21.42922     1\n",
-       "10.16298     1\n",
-       "8.49924      1\n",
-       "4.39494      1\n",
-       "3.79320      1\n",
-       "3.22081      1\n",
-       "2.97648      1\n",
-       "2.46655      1\n",
-       "2.21715      1\n",
-       "2.00143      1\n",
-       "1.87796      1\n",
-       "1.84406      1\n",
-       "1.78779      1\n",
-       "1.67874      1\n",
-       "1.33166      1\n",
-       "1.07289      1\n",
-       "0.88682      1\n",
-       "0.79789      1\n",
-       "0.74619      1\n",
-       "0.68320      1\n",
-       "0.46702      1\n",
-       "0.45903      1\n",
-       "0.36225      1\n",
-       "0.32963      1\n",
-       "0.29527      1\n",
-       "0.28138      1\n",
-       "0.25900      1\n",
-       "0.16504      1\n",
-       "0.14824      1\n",
-       "0.14372      1\n",
-       "0.14368      1\n",
-       "0.11973      1\n",
-       "0.09548      1\n",
-       "0.09529      1\n",
-       "0.08001      1\n",
-       "0.07639      1\n",
-       "0.07010      1\n",
-       "0.05700      1\n",
-       "0.03630      1\n",
-       "0.03498      1\n",
-       "0.00984      1\n",
-       "0.00000     37\n",
-       "Name: count, dtype: int64"
+       "OverallQual     22.40140\n",
+       "GrLivArea       21.42922\n",
+       "Neighborhood    10.16298\n",
+       "TotalBsmtSF      8.49924\n",
+       "ExterQual        4.39494\n",
+       "GarageCars       3.79320\n",
+       "CentralAir       3.22081\n",
+       "KitchenQual      2.97648\n",
+       "BsmtQual         2.46655\n",
+       "LotArea          2.21715\n",
+       "GarageFinish     2.00143\n",
+       "GarageCond       1.87796\n",
+       "Fireplaces       1.84406\n",
+       "BsmtFinSF1       1.78779\n",
+       "OverallCond      1.67874\n",
+       "FireplaceQu      1.33166\n",
+       "YearRemodAdd     1.07289\n",
+       "GarageArea       0.88682\n",
+       "GarageType       0.79789\n",
+       "GarageQual       0.74619\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 361,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3788,22 +3765,22 @@
     "  .round(5)\n",
     "\n",
     "\n",
-    "# importances.head(20)\n",
-    "importances.value_counts().sort_index(ascending=False)\n"
+    "importances.head(20)\n",
+    "# importances.value_counts().sort_index(ascending=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1168, 21), (1168,), (292, 21), (292,))"
+       "((1168, 39), (1168,), (292, 39), (292,))"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 428,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3812,7 +3789,7 @@
     "## Отбираем колонки, которые имеют значимость меньше порогового значения\n",
     "\n",
     "# Set the threshold value\n",
-    "threshold = 0.5\n",
+    "threshold = 0.05\n",
     "\n",
     "mask = (importances.abs() < threshold)\n",
     "\n",
@@ -3827,7 +3804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -3836,7 +3813,7 @@
        "<catboost.core.CatBoostRegressor at 0x169f8ca30>"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 429,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3850,15 +3827,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train acc: 0.1294217034294512\n",
-      "valid acc: 0.152356835928829\n"
+      "train acc: 0.1250923859145399\n",
+      "valid acc: 0.1512120637035314\n"
      ]
     }
    ],
@@ -3869,13 +3846,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['3SsnPorch', 'Alley', 'BedroomAbvGr', 'BldgType', 'BsmtFinSF2',\n",
+       "       'BsmtFinType1', 'BsmtFinType2', 'BsmtHalfBath', 'BsmtUnfSF',\n",
+       "       'Condition1', 'Condition2', 'Electrical', 'EnclosedPorch', 'ExterCond',\n",
+       "       'Exterior1st', 'Exterior2nd', 'Fence', 'Functional', 'Heating',\n",
+       "       'HouseStyle', 'KitchenAbvGr', 'LandContour', 'LandSlope', 'LotFrontage',\n",
+       "       'LowQualFinSF', 'MSSubClass', 'MasVnrArea', 'MasVnrType', 'MiscFeature',\n",
+       "       'MiscVal', 'MoSold', 'PoolArea', 'PoolQC', 'RoofMatl', 'RoofStyle',\n",
+       "       'SaleType', 'Street', 'Utilities', 'WoodDeckSF', 'YrSold'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 442,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Отбираем колонки для feature engeniring \n",
+    "\n",
+    "df[columns_to_drop].sort_index(axis=1).columns\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train acc: 0.1290448834256058\n",
-    "valid acc: 0.15117215086776775"
-   ]
+   "source": []
   }
  ],
  "metadata": {
